@@ -615,7 +615,7 @@ CITE_BIB_FILES         =
 # The QUIET tag can be used to turn on/off the messages that are generated
 # by doxygen. Possible values are YES and NO. If left blank NO is used.
 
-QUIET                  = NO
+QUIET                  = YES
 
 # The WARNINGS tag can be used to turn on/off the warning messages that are
 # generated by doxygen. Possible values are YES and NO. If left blank
@@ -709,7 +709,7 @@ RECURSIVE              = YES
 # Note that relative paths are relative to the directory from which doxygen is
 # run.
 
-EXCLUDE                = ../../outputs ../../validation ../../interfaces ../../_CPack_Packages ../../python  ../../protobufIO/HepMC3.pb.h
+EXCLUDE                =  @PROJECT_BINARY_DIR@  @PROJECT_SOURCE_DIR@/test  @PROJECT_SOURCE_DIR@/python  @PROJECT_SOURCE_DIR@/protobufIO/HepMC3.pb.h @PROJECT_SOURCE_DIR@/protobufIO/HepMC3.pb.cc
 
 # The EXCLUDE_SYMLINKS tag can be used to select whether or not files or
 # directories that are symbolic links (a Unix file system feature) are excluded
@@ -723,7 +723,7 @@ EXCLUDE_SYMLINKS       = NO
 # against the file with absolute path, so to exclude all test directories
 # for example use the pattern */test/*
 
-EXCLUDE_PATTERNS       = *cmdline.h* *gzstream* *_fwd.h  */pybind11/* *HepMC3.pb.h*
+EXCLUDE_PATTERNS       = *Pythia8ToHepMC3* *cmdline.h* *gzstream* *_fwd.h  */pybind11/* *HepMC3.pb.h* *HepMC3.pb.cc* *CMakeFiles*  *BUILD* *CMakeCache* *-cache-*
 
 # The EXCLUDE_SYMBOLS tag can be used to specify one or more symbol names
 # (namespaces, classes, functions, etc.) that should be excluded from the
@@ -737,7 +737,7 @@ EXCLUDE_SYMBOLS        =
 # directories that contain example code fragments that are included (see
 # the \include command).
 
-EXAMPLE_PATH           = @CMAKE_CURRENT_SOURCE_DIR@/../examples
+EXAMPLE_PATH           = @PROJECT_SOURCE_DIR@/examples
 
 # If the value of the EXAMPLE_PATH tag contains directories, you can use the
 # EXAMPLE_PATTERNS tag to specify one or more wildcard pattern (like *.cpp
