@@ -29,7 +29,8 @@ private:
     bool m_go_try_cache; //!< Flag to trigger using the cached event
     std::vector< std::shared_ptr<T> > m_readers; //!< Vector of all active readers
     std::vector< std::pair<GenEvent, bool> > m_events; //!< Vector of events
-    std::vector< std::thread > m_threads;
+    std::vector< std::thread > m_threads;  //!< Vector of threads
+    /// @brief The reading function
     static void read_function(std::pair<GenEvent,bool>& e, std::shared_ptr<T> r)
     {
         e.second = r->read_event(e.first);
@@ -37,6 +38,7 @@ private:
         if (r->failed()) r->close();
     }
 public:
+    /// @brief Constructor 
     ReaderMT(const std::string& filename): m_go_try_cache(true) {
         m_events.reserve(m_number_of_threads);
         m_readers.reserve(m_number_of_threads);
@@ -46,14 +48,17 @@ public:
             m_readers.back()->skip(m_number_of_threads-1-i);
         }
     }
+    /// @brief Destructor
     ~ReaderMT() {
         m_readers.clear();
         m_events.clear();
         m_threads.clear();
     }
+    /// @brief skip
     bool skip(const int) override  {
         return false;///Not implemented
     }
+    /// @brief event reading
     bool read_event(GenEvent& evt)  override {
         if ( !m_events.empty() ) {
             evt = m_events.back().first;
