@@ -92,11 +92,12 @@ void calculate_longest_path_to_top(ConstGenVertexPtr v, std::map<ConstGenVertexP
     pathl[v] = p;
 }
 
+/** @brief pointer to the common block */
 HEPMC3_EXPORT_API struct HEPEVT*  hepevtptr = nullptr;
 HEPMC3_EXPORT_API std::shared_ptr<struct HEPEVT_Pointers<double> >  HEPEVT_Wrapper_Runtime_Static::m_hepevtptr = nullptr;
 HEPMC3_EXPORT_API int HEPEVT_Wrapper_Runtime_Static::m_max_particles = 0;
 
-
+/** @brief Set the address */
 void HEPEVT_Wrapper_Runtime::set_hepevt_address(char *c) {
     m_hepevtptr = std::make_shared<struct HEPEVT_Pointers<double> >();
     char* x = c;
